[gd_scene load_steps=23 format=2]

[ext_resource path="res://art/spr_joints.png" type="Texture" id=1]
[ext_resource path="res://Mechs/KillerDutchMech.gd" type="Script" id=2]
[ext_resource path="res://SFX/Angry Robot 1.mp3" type="AudioStream" id=3]
[ext_resource path="res://art/spr_head.png" type="Texture" id=4]
[ext_resource path="res://art/spr_body.png" type="Texture" id=5]
[ext_resource path="res://art/spr_hands.png" type="Texture" id=6]
[ext_resource path="res://art/spr_smokecloud.png" type="Texture" id=7]
[ext_resource path="res://SFX/Missile Launch 1.mp3" type="AudioStream" id=8]

[sub_resource type="Gradient" id=11]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=12]
gradient = SubResource( 11 )

[sub_resource type="Curve" id=13]
max_value = 3.0
_data = [ Vector2( 0, 1 ), 0.0, 5.19161, 0, 0, Vector2( 0.997126, 3 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=14]
curve = SubResource( 13 )

[sub_resource type="ParticlesMaterial" id=15]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 360.0
angle_random = 1.0
scale_random = 1.0
scale_curve = SubResource( 14 )
color_ramp = SubResource( 12 )

[sub_resource type="Animation" id=3]
resource_name = "batLHand"
length = 2.4
tracks/0/type = "value"
tracks/0/path = NodePath("UpperArmL/ArmL/HandL:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 36.8489, -11.6579, 18.9978, 7.72485, 36.8489 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UpperArmL/ArmL:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -406.633, -424.074, -545.315, -545.429, -406.633 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("UpperArmL:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -2.42474, 93.014, 69.2846, 14.9413, -2.42474 ]
}

[sub_resource type="Animation" id=4]
resource_name = "rest"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("UpperArmR/ArmR:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -0.748195, 137.689 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UpperArmR/ArmR:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 53.7334, 87.8696 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("UpperArmR/ArmR:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("UpperArmR:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 109.81, -88.1709 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("UpperArmR:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 2.60472, -4.35228 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("UpperArmR:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Head:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -128.647 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Head:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Head:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("UpperArmR/ArmR/HandR:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2.1962, -144.387 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("UpperArmR/ArmR/HandR:rotation_degrees")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -30.8545, -57.8359 ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("UpperArmR/ArmR/HandR:scale")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("UpperArmL:position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -116.179, -88.1709 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("UpperArmL:rotation_degrees")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -2.42474, 18.3937 ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("UpperArmL:scale")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("Body:position")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -2.81441 ) ]
}
tracks/16/type = "value"
tracks/16/path = NodePath("Body:rotation_degrees")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/17/type = "value"
tracks/17/path = NodePath("Body:scale")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/18/type = "value"
tracks/18/path = NodePath("UpperArmL/ArmL:position")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -0.748195, 137.689 ) ]
}
tracks/19/type = "value"
tracks/19/path = NodePath("UpperArmL/ArmL:rotation_degrees")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -406.633, -457.785 ]
}
tracks/20/type = "value"
tracks/20/path = NodePath("UpperArmL/ArmL:scale")
tracks/20/interp = 1
tracks/20/loop_wrap = true
tracks/20/imported = false
tracks/20/enabled = true
tracks/20/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/21/type = "value"
tracks/21/path = NodePath("UpperArmL/ArmL/HandL:position")
tracks/21/interp = 1
tracks/21/loop_wrap = true
tracks/21/imported = false
tracks/21/enabled = true
tracks/21/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.587658, -138.431 ) ]
}
tracks/22/type = "value"
tracks/22/path = NodePath("UpperArmL/ArmL/HandL:rotation_degrees")
tracks/22/interp = 1
tracks/22/loop_wrap = true
tracks/22/imported = false
tracks/22/enabled = true
tracks/22/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 36.8489, 67.3799 ]
}
tracks/23/type = "value"
tracks/23/path = NodePath("UpperArmL/ArmL/HandL:scale")
tracks/23/interp = 1
tracks/23/loop_wrap = true
tracks/23/imported = false
tracks/23/enabled = true
tracks/23/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "invulnerable"
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true, false, true, false, true ]
}

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "batLHand"

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "rest"

[sub_resource type="AnimationNodeStateMachineTransition" id=7]

[sub_resource type="AnimationNodeStateMachineTransition" id=8]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=9]
states/batLHand/node = SubResource( 5 )
states/batLHand/position = Vector2( 636, 45 )
states/rest/node = SubResource( 6 )
states/rest/position = Vector2( 176, 29 )
transitions = [ "rest", "batLHand", SubResource( 7 ), "batLHand", "rest", SubResource( 8 ) ]
start_node = "rest"
graph_offset = Vector2( -363.081, -100.508 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=10]

[node name="KillerDutchMech" type="Node2D"]
position = Vector2( 1.41418, 0 )
scale = Vector2( 3, 3 )
script = ExtResource( 2 )
missileLaunchers = [ NodePath("UpperArmL/ArmL/HandL/Position2D"), NodePath("UpperArmR/ArmR/HandR/Position2D") ]

[node name="Body" type="Sprite" parent="."]
position = Vector2( 0, -2.81441 )
texture = ExtResource( 5 )

[node name="Head" type="Sprite" parent="."]
position = Vector2( 0, -128.647 )
texture = ExtResource( 4 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="Head" groups=[
"canBeHitByMissiles",
]]

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Head/KinematicBody2D"]
polygon = PoolVector2Array( -1.21788, -68.4254, 72.719, -58.6721, 96.0012, -42.9408, 114.249, -1.09574, 100.406, 28.479, 10.4233, 63.4023, -10.6566, 64.3462, -101.898, 26.9059, -114.168, 6.76988, -108.82, -18.0855, -90.8859, -47.6602, -55.6479, -62.4476 )

[node name="UpperArmL" type="Sprite" parent="."]
position = Vector2( -116.179, -88.1709 )
rotation = 0.0405669
texture = ExtResource( 1 )
offset = Vector2( 0.826675, 70.6227 )
hframes = 2
frame = 1
__meta__ = {
"_edit_bone_": true,
"_edit_ik_": true
}

[node name="ArmL" type="Sprite" parent="UpperArmL"]
position = Vector2( -0.748195, 137.689 )
rotation = -7.30075
texture = ExtResource( 1 )
offset = Vector2( -0.421516, -69.7946 )
hframes = 2
__meta__ = {
"_edit_bone_": true
}

[node name="HandL" type="Sprite" parent="UpperArmL/ArmL"]
position = Vector2( 0.587658, -138.431 )
rotation = 0.76469
texture = ExtResource( 6 )
offset = Vector2( 2.26794, -65.4607 )
hframes = 2
__meta__ = {
"_edit_bone_": true
}

[node name="Position2D" type="Position2D" parent="UpperArmL/ArmL/HandL"]
position = Vector2( 14.1172, -42.7116 )

[node name="Particles2D" type="Particles2D" parent="UpperArmL/ArmL/HandL/Position2D"]
emitting = false
amount = 2
one_shot = true
speed_scale = 2.0
explosiveness = 1.0
process_material = SubResource( 15 )
texture = ExtResource( 7 )

[node name="UpperArmR" type="Sprite" parent="."]
position = Vector2( 109.81, -88.1709 )
rotation = 0.0177623
texture = ExtResource( 1 )
offset = Vector2( 0.826675, 70.6227 )
hframes = 2
__meta__ = {
"_edit_bone_": true,
"_edit_ik_": true
}

[node name="ArmR" type="Sprite" parent="UpperArmR"]
position = Vector2( -0.748195, 137.689 )
rotation = 1.07373
texture = ExtResource( 1 )
offset = Vector2( -0.421516, -69.7946 )
hframes = 2
frame = 1
__meta__ = {
"_edit_bone_": true
}

[node name="HandR" type="Sprite" parent="UpperArmR/ArmR"]
position = Vector2( 2.1962, -144.387 )
rotation = -0.645937
texture = ExtResource( 6 )
offset = Vector2( -5.76402, -58.4693 )
hframes = 2
frame = 1
__meta__ = {
"_edit_bone_": true
}

[node name="Position2D" type="Position2D" parent="UpperArmR/ArmR/HandR"]
position = Vector2( -16.7871, -36.792 )

[node name="Particles2D2" type="Particles2D" parent="UpperArmR/ArmR/HandR/Position2D"]
emitting = false
amount = 2
one_shot = true
speed_scale = 2.0
explosiveness = 1.0
process_material = SubResource( 15 )
texture = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/batLHand = SubResource( 3 )
anims/rest = SubResource( 4 )

[node name="MissileLauncherTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="InvulnerableAnimationPlayer" type="AnimationPlayer" parent="."]
anims/invulnerable = SubResource( 2 )

[node name="HitSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 5.0
attenuation = 0.378929

[node name="Skeleton2D" type="Skeleton2D" parent="."]

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 9 )
anim_player = NodePath("../AnimationPlayer")
active = true
root_motion_track = NodePath("Body:position")
parameters/playback = SubResource( 10 )

[node name="MissileLaunchedSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[connection signal="timeout" from="MissileLauncherTimer" to="." method="_on_MissileLauncherTimer_timeout"]
[connection signal="animation_finished" from="InvulnerableAnimationPlayer" to="." method="_on_InvulnerableAnimationPlayer_animation_finished"]
